--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
 		"build": "vite build && tsc --emitDeclarationOnly",
 		"prepublishOnly": "npm run build"
 	},
+	"peerDependencies": {
+		"@ffmpeg/ffmpeg": "^0.12.15"
+	},
 	"devDependencies": {
 		"@types/howler": "^2.2.12",
 		"@types/node": "^22.9.0",
@@ -46,7 +49,6 @@
 		"vite": "^5.4.10"
 	},
 	"dependencies": {
-		"@ffmpeg/ffmpeg": "^0.12.15",
 		"howler": "^2.2.4",
 		"opentype.js": "^1.3.4",
 		"pixi-filters": "^6.0.5",
