--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@ node_modules
 dist
 dist-ssr
 *.d.ts
+.vite/
+.env
 
 # IDE
 .vscode
@@ -17,3 +19,8 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# AI
+.taskmaster/
+.claude/
+.cursor/
