--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
 		"url": "https://github.com/shotstack/shotstack-studio-sdk"
 	},
 	"scripts": {
-		"build": "vite build && tsc --emitDeclarationOnly",
+		"build": "vite build",
 		"prepublishOnly": "npm run build"
 	},
 	"peerDependencies": {
@@ -46,7 +46,8 @@
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-import": "^2.31.0",
 		"typescript": "^5.6.2",
-		"vite": "^5.4.10"
+		"vite": "^5.4.10",
+		"vite-plugin-dts": "^4.5.4"
 	},
 	"dependencies": {
 		"howler": "^2.2.4",
