--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
 		"vite-plugin-dts": "^4.5.4"
 	},
 	"dependencies": {
+		"fast-deep-equal": "^3.1.3",
 		"howler": "^2.2.4",
 		"opentype.js": "^1.3.4",
 		"pixi-filters": "^6.0.5",
