--- a/package.json
+++ b/package.json
@@ -50,7 +50,9 @@
 		"vite-plugin-dts": "^4.5.4"
 	},
 	"dependencies": {
+		"canvaskit-wasm": "^0.40.0",
 		"fast-deep-equal": "^3.1.3",
+		"gsap": "^3.13.0",
 		"howler": "^2.2.4",
 		"opentype.js": "^1.3.4",
 		"pixi-filters": "^6.0.5",
