--- a/package.json
+++ b/package.json
@@ -31,9 +31,6 @@
 		"build": "vite build",
 		"prepublishOnly": "npm run build"
 	},
-	"peerDependencies": {
-		"@ffmpeg/ffmpeg": "^0.12.15"
-	},
 	"devDependencies": {
 		"@types/howler": "^2.2.12",
 		"@types/node": "^22.9.0",
@@ -52,6 +49,7 @@
 	"dependencies": {
 		"fast-deep-equal": "^3.1.3",
 		"howler": "^2.2.4",
+		"mediabunny": "^1.11.2",
 		"opentype.js": "^1.3.4",
 		"pixi-filters": "^6.0.5",
 		"pixi.js": "^8.5.2",
