--- a/package.json
+++ b/package.json
@@ -29,25 +29,37 @@
 	},
 	"scripts": {
 		"build": "vite build",
+		"test": "vitest",
+		"test:run": "vitest run",
+		"test:watch": "vitest watch",
+		"test:coverage": "vitest run --coverage",
 		"prepublishOnly": "npm run build"
 	},
 	"peerDependencies": {
 		"@ffmpeg/ffmpeg": "^0.12.15"
 	},
 	"devDependencies": {
+		"@testing-library/jest-dom": "^6.8.0",
+		"@testing-library/react": "^16.3.0",
+		"@testing-library/user-event": "^14.6.1",
 		"@types/howler": "^2.2.12",
-		"@types/node": "^22.9.0",
+		"@types/node": "^22.18.0",
 		"@types/opentype.js": "^1.3.8",
 		"@typescript-eslint/eslint-plugin": "^7.18.0",
 		"@typescript-eslint/parser": "^7.18.0",
+		"@vitest/coverage-v8": "^3.2.4",
+		"@vitest/ui": "^3.2.4",
 		"eslint": "^8.57.1",
 		"eslint-config-airbnb-base": "^15.0.0",
 		"eslint-config-airbnb-typescript": "^18.0.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-import": "^2.31.0",
+		"happy-dom": "^18.0.1",
+		"jsdom": "^26.1.0",
 		"typescript": "^5.6.2",
 		"vite": "^5.4.10",
-		"vite-plugin-dts": "^4.5.4"
+		"vite-plugin-dts": "^4.5.4",
+		"vitest": "^3.2.4"
 	},
 	"dependencies": {
 		"canvaskit-wasm": "^0.40.0",
