--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
 		"vite-plugin-dts": "^4.5.4"
 	},
 	"dependencies": {
+		"@shotstack/shotstack-canvas": "^1.1.0",
 		"fast-deep-equal": "^3.1.3",
 		"howler": "^2.2.4",
 		"mediabunny": "^1.11.2",
