--- a/tsconfig.json
+++ b/tsconfig.json
@@ -39,5 +39,10 @@
 			"@templates/*": ["templates/*"]
 		}
 	},
-	"include": ["src", "vite.config.ts"]
+	"include": [
+		"src",
+		"vite.config.ts",
+		"vite.config.schema.ts"
+	],
+	"exclude": ["tests", "**/*.test.ts", "**/*.spec.ts"]
 }
