--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
 	"types": "dist/index.d.ts",
 	"exports": {
 		".": {
+			"types": "./dist/index.d.ts",
 			"import": "./dist/shotstack-studio.es.js",
-			"require": "./dist/shotstack-studio.umd.js"
+			"require": "./dist/shotstack-studio.umd.js",
+			"default": "./dist/shotstack-studio.es.js"
 		},
 		"./schema": {
+			"types": "./dist/schema/index.d.ts",
 			"import": "./dist/schema/index.mjs",
-			"require": "./dist/schema/index.js"
+			"require": "./dist/schema/index.cjs",
+			"default": "./dist/schema/index.mjs"
 		}
 	},
 	"files": [
