--- a/package.json
+++ b/package.json
@@ -50,10 +50,11 @@
 		"build:schema": "vite build --config vite.config.schema.ts",
 		"test": "npm run build && jest",
 		"test:watch": "jest --watch",
+		"test:package": "node test-package.js",
 		"lint": "eslint --ignore-path .gitignore .",
 		"lint:fix": "eslint --ignore-path .gitignore --fix .",
 		"format": "prettier --ignore-path .gitignore --write .",
-		"prepublishOnly": "npm run build && npm run test"
+		"prepublishOnly": "npm run build && npm run test && npm run test:package"
 	},
 	"devDependencies": {
 		"@jest/globals": "^30.2.0",
@@ -75,7 +76,7 @@
 		"vite-plugin-dts": "^4.5.4"
 	},
 	"dependencies": {
-		"@shotstack/shotstack-canvas": "^1.1.7",
+		"@shotstack/shotstack-canvas": "^1.2.8",
 		"fast-deep-equal": "^3.1.3",
 		"howler": "^2.2.4",
 		"mediabunny": "^1.11.2",
