--- a/.prettierrc
+++ b/.prettierrc
@@ -5,5 +5,13 @@
 	"useTabs": true,
 	"tabWidth": 2,
 	"arrowParens": "avoid",
-	"printWidth": 150
+	"printWidth": 150,
+	"overrides": [
+		{
+			"files": "*.md",
+			"options": {
+				"useTabs": false
+			}
+		}
+	]
 }
