--- a/tsconfig.json
+++ b/tsconfig.json
@@ -39,10 +39,6 @@
 			"@templates/*": ["templates/*"]
 		}
 	},
-	"include": [
-		"src",
-		"vite.config.ts",
-		"vite.config.schema.ts"
-	],
+	"include": ["src", "vite.config.ts", "vite.config.schema.ts"],
 	"exclude": ["tests", "**/*.test.ts", "**/*.spec.ts"]
 }
