--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
 		"vite-plugin-dts": "^4.5.4"
 	},
 	"dependencies": {
+		"@huggingface/transformers": "^3.0.0",
 		"@shotstack/shotstack-canvas": "^1.6.4",
 		"fast-deep-equal": "^3.1.3",
 		"howler": "^2.2.4",
