--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
 		"lint": "eslint --ignore-path .gitignore .",
 		"lint:fix": "eslint --ignore-path .gitignore --fix .",
 		"format": "prettier --ignore-path .gitignore --write .",
-		"prepublishOnly": "npm run build && npm run test && npm run test:package"
+		"prepublishOnly": "npm run build && npm run test && npm run test:package",
+		"generate:fonts": "npx tsx scripts/fetch-google-fonts.ts"
 	},
 	"devDependencies": {
 		"@jest/globals": "^30.2.0",
