--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
 	},
 	"dependencies": {
 		"@huggingface/transformers": "^3.0.0",
+		"@shotstack/schemas": "^1.3.3",
 		"@shotstack/shotstack-canvas": "^1.6.6",
 		"fast-deep-equal": "^3.1.3",
 		"howler": "^2.2.4",
