refactor: schema imports

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,7 +29,9 @@
 			"@canvas/*": ["components/canvas/*"],
 			"@timeline/*": ["components/timeline/*"],
 			"@shared/*": ["core/shared/*"],
+			"@schemas": ["core/schemas/index"],
 			"@schemas/*": ["core/schemas/*"],
+			"@timing/*": ["core/timing/*"],
 			"@layouts/*": ["core/layouts/*"],
 			"@animations/*": ["core/animations/*"],
 			"@events/*": ["core/events/*"],
